fixed the server
